# qc-dashboard

./: .gitignore
server/: .env  .gitignore  Dockerfile  pyproject.toml
server/kubernetes/: deployment.yaml  service.yaml
server/src/app/: main.py
server/src/app/api/: computation.py
server/src/app/services/: computation_service.py
ui/: .env  Dockerfile  package-lock.json  package.json
ui/kubernetes/: deployment.yaml  service.yaml
ui/src/: App.tsx
ui/src/api/: client.ts
ui/src/api/spec/: openapi.yaml
